--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -3,3 +3,11 @@ body {
     text-align: center;
     font-family: Verdana;
 }
+
+h1 {
+    font-family: Verdana, sans-serif;
+    font-size: 50px;
+    color: white;
+    text-align: center;
+    font-weight: 400;
+}
