--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -16,3 +16,10 @@ h1 {
     color: aquamarine;
     font-size: 16px;
 }
+
+h2, h3 {
+    font-family: Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
