--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -23,3 +23,9 @@ h2, h3 {
     font-size: 42px;
     color: white;
 }
+
+.p1 {
+    font-family: Verdana, sans-serif;
+    font-size: 21px;
+    color: gray;
+}
